--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "boxen": "^5.1.2",
     "chalk": "^4.0.0",
     "commander": "^11.0.0",
+    "dev": "github:types/express",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "typescript": "^5.1.6"
   }
 }
