--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "packageresolution",
-  "version": "1.0.0",
+  "name": "package-resolution",
+  "version": "1.0.4",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "ts-node main.ts"
+    "dev": "ts-node main.ts",
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
+  "files": [
+    "dist",
+    "src/**/*.js",
+    "index.js"
+  ],
   "bin": {
-    "analyze-cli": "ts-node main.ts"
+    "analyze-cli": "main.js"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +23,12 @@
     "boxen": "^5.1.2",
     "chalk": "^4.0.0",
     "commander": "^11.0.0",
-    "dev": "github:types/express",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1",
+    "dev": "github:types/express"
   }
 }
