--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules","dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "analyze.test.ts"
+  ]
 }
