--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package-resolution",
-  "version": "1.0.4",
-  "description": "",
+  "name": "analyze-tool",
+  "version": "1.0.0",
+  "description": "Analyze the dependency relationships in package-lock.json",
   "main": "main.js",
   "scripts": {
     "dev": "ts-node main.ts",
@@ -21,7 +21,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "commander": "^11.0.0"
   },
