--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prepublishOnly": "npm run build",
     "prepare": "husky install",
     "test": "jest",
-    "test-c": "jest --coverage"
+    "test-c": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"**/*.+(ts)\""
   },
   "files": [
     "public",
@@ -19,7 +21,12 @@
   "bin": {
     "analyze-cli": "dist/main.js"
   },
-  "keywords": [],
+  "keywords": [
+    "package",
+    "analyze",
+    "tool",
+    "package analyze"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
